# tanit

./: .coveragerc  .flake8  .gitignore  .isort.cfg  .travis.yml  README.md  README.rst  pyproject.toml  pytest.ini  setup.py  test-click.py  tox.ini
.travis/: gcp.json.enc
docs/: architecture.rst  conf.py  configuration.rst  index.rst  quickstart.rst  setup.rst
kraken/: __init__.py
kraken/client/: client_factory.py
kraken/common/config/: config.py
kraken/common/core/: engine.py  exception.py
kraken/common/model/: execution_type.py  job.py  task.py  worker.py
kraken/common/utils/: glob.py  utils.py
kraken/filesystem/: config.py  filesystem.py  filesystem_factory.py  ioutils.py
kraken/filesystem/gcp/: filesystem.py
kraken/filesystem/hdfs/: filesystem.py
kraken/filesystem/local/: filesystem.py  local_filesystem.py  remote_filesystem.py
kraken/filesystem/s3/: filesystem.py
kraken/master/: util.py
kraken/master/client/: __main__.py  client.py  client_factory.py
kraken/master/config/: config.py
kraken/master/core/: dispatcher.py  engine.py  job.py  master.py  scheduler.py  worker.py
kraken/master/protocol/: master.thrift  worker.thrift
kraken/thrift/: Makefile
tanit/client/: cli.py
tanit/common/model/: task.py  (+1 more)
tanit/filesystem/: config.py  filesystem.py  filesystem_factory.py  filesystem_manager.py  ioutils.py  model.py
tanit/thrift/: Makefile
tests/integration/: __main__.py  conftest.py  test_filesystem.py  test_filesystem_gcs.py  test_filesystem_local.py  test_filesystem_s3.py  test_master_standalone.py  test_service_integration.py
(+157 files in other folders)
